<resources>
    <string name="app_name">Agenda telefônica</string>
    <string name="button_add">Adicionar contato</string>
    <string name="button_search">Procurar contato</string>
    <string name="name">Nome</string>
    <string name="address">Endereço</string>
    <string name="city">Cidade</string>
    <string name="phone1">Telefone</string>
    <string name="phone2">Telefone 2</string>
    <string name="search_label">Buscar…</string>
    <string name="button_remove">Remover</string>
    <string name="button_update">Atualizar</string>
    <string name="button_getImage">Selecionar imagem</string>
    <string name="go_home">Voltar</string>
</resources>
